k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/demo-pipeline-angular/app:latest
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 9000
              protocol: TCP
